Adding header h3 to pass some step of functional test

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Reading tracker</title>
+        <h3>Please enter a book’s title that you’d like to track,
+            page number where you’re currently on
+            and total page numbers of the book.</h3>
     </head>
     <body>
 
