Adding input id for input_box to pass func test

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -6,6 +6,9 @@
         <h3>Please enter a book’s title that you’d like to track,
             page number where you’re currently on
             and total page numbers of the book.</h3>
+        <input id="new_book" placeholder="Book's title" />
+        <input id="current_page" placeholder="Current page" />
+        <input id="total_pages" placeholder="Total pages in a book" />
     </head>
     <body>
 
