--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Reading tracker</title>
+        <h1>Your books reading process</h1>
         <h3>Please enter a book’s title that you’d like to track,
             page number where you’re currently on
             and total page numbers of the book.</h3>
