Adding tag "button" to pass func test

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -10,6 +10,7 @@
         <input id="new_book" placeholder="Book's title" />
         <input id="current_page" placeholder="Current page" />
         <input id="total_pages" placeholder="Total pages in a book" />
+        <button type="button">Save and see progress chart</button>
     </head>
     <body>
 
