Chaning input id

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -9,9 +9,9 @@
         <h3>Please enter a book’s title that you’d like to track,
             page number where you’re currently on
             and total page numbers of the book.</h3>
-        <input id="new_book" placeholder="Book's title" />
-        <input id="current_page" placeholder="Current page" />
-        <input id="total_pages" placeholder="Total pages in a book" />
+        <input id="id_new_book" placeholder="Book's title" />
+        <input id="id_current_page" placeholder="Current page" />
+        <input id="id_total_pages" placeholder="Total pages in a book" />
         <button type="button">Save and see progress chart</button>
     </body>
 </html>
