Adding in table section: <tr><td>

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -17,6 +17,7 @@
         </form>
         <button type="button">Save and see progress chart</button>
         <table id="id_book_table">
+            <tr><td>{{ new_title }}</td></tr>
         </table>
     </body>
 </html>
