--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Reading tracker</title>
-        <h1>Your books reading process</h1>
+        <h1>Your books reading progress</h1>
     </head>
     <body>
         <h3>Please type a book’s title that you’d like to track,
