Fixing a % in for loop typo

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -19,7 +19,7 @@
         <table id="id_book_table">
             {% for book in books %}
             <tr><td>{{ book.title }}</td><td>{{ book.current_page }}</td><td>{{ book.total_pages }}</td></tr>
-            { %% endfor}
+            {% endfor %}
         </table>
     </body>
 </html>
