--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -14,7 +14,7 @@
             <input name="title" id="id_new_book" placeholder="Book's title" />
             <input name="current_page" id="id_current_page" placeholder="Current page" />
             <input name="total_pages" id="id_total_pages" placeholder="Total pages in a book" />
-            <input type="submit" class="button button_main" value="Save and see progress chart">
+            <input type="submit" class="button button_main" value="Add to your book list">
         </form>
         <table id="id_book_table">
             {% for book in list_of_books.book_set.all %}
