Adding chart button

--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -21,5 +21,8 @@
                 <tr><td>{{ book.title }}</td><td>{{ book.current_page }}</td><td>{{ book.total_pages }}</td></tr>
             {% endfor %}
         </table>
+        <form>
+            <input type="submit" class="button button_chart" value="Generate progress chart">
+        </form>
     </body>
 </html>
