Adding 30 colors for background

--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -35,7 +35,13 @@
             datasets: [{
                 data: {{ data|safe }},
                 label: "in percentage",
-                backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+                backgroundColor: ["#6bdde5", "#618bf4", "#a792ce", "#42afa1", "#bf56ab",
+                                  "#6be5b0", "#61d4f4", "#929bce", "#42af6a", "#9d56bf",
+                                  "#e56bdd", "#f4618b", "#cea792", "#a142af", "#abbf56",
+                                  "#6ba0e5", "#8161f4", "#c592ce", "#4287af", "#bf5677",
+                                  "#736be5", "#cb61f4", "#ce92b9", "#4251af", "#bf6956",
+                                  "#e56bbe", "#f46166", "#ff8c8c", "#af42a3", "#91bf56",
+                              ]
               }]
           },
           options: {
