--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -11,10 +11,12 @@
             and total page numbers of the book.</h3>
         <form method="POST" action="/lists/new">
             {% csrf_token %}
-            <input name="title" id="id_new_book" placeholder="Book's title" />
-            <input name="current_page" id="id_current_page" placeholder="Current page" />
-            <input name="total_pages" id="id_total_pages" placeholder="Total pages in a book" />
-            <input type="submit" class="button button_main" value="Add to your book list">
+            <p style="text-align: center;">
+                <input name="title" id="id_new_book" placeholder="Book's title" />
+                <input name="current_page" id="id_current_page" placeholder="Current page" />
+                <input name="total_pages" id="id_total_pages" placeholder="Total pages in a book" />
+                <input type="submit" class="button button_main" value="Add to your book list">
+            </p>
         </form>
     </body>
 </html>
