--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Reading tracker</title>
-        <h1>Your books reading progress</h1>
-    </head>
-    <body>
-        <h3>Please type a book’s title that you’d like to track,
-            page number where you’re currently on
-            and total page numbers of the book.</h3>
-        <form method="POST" action="/lists/new">
-            {% csrf_token %}
-            <p style="text-align: center;">
-                <input name="title" id="id_new_book" placeholder="Book's title" />
-                <input name="current_page" id="id_current_page" placeholder="Current page" />
-                <input name="total_pages" id="id_total_pages" placeholder="Total pages in a book" />
-                <input type="submit" class="button button_main" value="Add to your book list">
-            </p>
-        </form>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block header_text %}
+Please type a book’s title that you’d like to track, page number
+where you’re currently on and total page numbers of the book.
+{% endblock %}
+
+{% block form_action %}
+/lists/new
+{% endblock %}
