--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 
 {% block header_text %}
 Please type a book’s title that you’d like to track, page number
