Renaming title of chart

--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -42,7 +42,7 @@ where you’re currently on and total page numbers of the book.
       },
       options: {
           legend: { display: false},
-          title: { display: true, text: 'Your progress of reading the books'},
+          title: { display: true, text: 'Your reading progress'},
           scales: {
               xAxes: [{
                   ticks: {
