--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -4,40 +4,48 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" media="screen">
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
         <link rel="stylesheet" href="/static/base.css" media="screen">
         <title>Reading tracker</title>
     </head>
     <body>
-    <div class="container">
+    <div class="container" id="container">
 
         <div class="row">
             <div class="text-center">
                 <div class="col-md-12 jumbotron">
                     <h1>Your books reading progress</h1>
                     <div class="clearfix visible-xs-block"></div>
-                            <h4>{% block header_text %} {% endblock %}</h4>
-                            <form method="POST" action="{% block form_action %} {% endblock %}">
-                                {% csrf_token %}
-                                    <input name="title" id="id_new_book"
-                                        class="form-control" placeholder="Title" />
-                                    <input name="current_page" id="id_current_page"
-                                        class="form-control" placeholder="Current page" />
-                                    <input name="total_pages" id="id_total_pages"
-                                        class="form-control" placeholder="Total pages in a book" />
-                                    <input type="submit" class="button button_main"
-                                        value="Add to your book list">
-                            </form>
+                            <h4>Please type details of the book
+                                of which progress you'd like to track.</h4>
+                            <div id="inputbox">
+                                <form method="POST" action="{% block form_action %} {% endblock %}">
+                                    {% csrf_token %}
+                                        <input name="title" id="id_new_book"
+                                            class="form-control" placeholder="Title" />
+                                        <input name="current_page" id="id_current_page"
+                                            class="form-control" placeholder="Current page" />
+                                        <input name="total_pages" id="id_total_pages"
+                                            class="form-control" placeholder="Total number of pages" />
+                                        <input type="submit" id="button" class="button button_main"
+                                            value="Add and see a chart">
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
         <div class="row">
-            <div class="col-md-6 col-md-offset-3    ">
-                {% block book_table %}
-                {% endblock %}
-                {% block chart_js %}
-                {% endblock %}
+            <div class="col-md-12 mx-auto">
+                <div class="col-md-8 mx-auto" id="table">
+                    {% block book_table %}
+                    {% endblock %}
+                </div>
+                <div align="center" id="chart">
+                    {% block chart_js %}
+                    {% endblock %}
+                </div>
             </div>
         </div>
 
