Adjusting templates to pass func tests

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -46,6 +46,10 @@
                     {% block chart_js %}
                     {% endblock %}
                 </div>
+                <div class="login">
+                    {% block login %}
+                    {% endblock %}
+                </div>
             </div>
         </div>
 
