--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -16,7 +16,7 @@
             {{ form.as_p }}
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}" />
-            <p><input type="submit" value="Sign in"></p>
+            <p><input type="submit" class="button button_login value="Sign in"></p>
         </form>
     </div>
 {% endblock %}
