--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" media="screen">
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-        <link rel="stylesheet" href="/static/base.css" media="screen">
+        <link rel="stylesheet" href="/static/base.css?{% now "U" %}" media="screen">
         <title>Reading tracker</title>
     </head>
     <body>
@@ -46,7 +46,7 @@
                     {% block chart_js %}
                     {% endblock %}
                 </div>
-                <div class="login">
+                <div class="container">
                     {% block login %}
                     {% endblock %}
                 </div>
