Removing useless loop

--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -2,21 +2,18 @@
 
 {% block login%}
     <h3>Login to account</h3>
-
     {% if form.errors %}
-        <p>
-            Your username and password didn't match.
-            Please try again.
-        </p>
-    {% else %}
-        <p>Enter your username and password to sign in.</p>
+        <p>Your username and password didn't match.Please try again.</p>
     {% endif %}
-    <div class="login-form">
-        <form action="{% url 'login' %}" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}" />
-            <p><input type="submit" class="button button_login value="Sign in"></p>
-        </form>
-    </div>
+        <div id="inputbox">
+            <form action="{% url 'login' %}" method="post">
+                <div class="field">
+                    {{ form.as_p }}
+                    {% csrf_token %}
+                        <input type="submit" id="button" class="button button_login"
+                        value="Sign in">
+                </div>
+            </form>
+        </div>
+
 {% endblock %}
