Changing block name from login to title

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -47,7 +47,7 @@
                     {% endblock %}
                 </div>
                 <div class="container">
-                    {% block login %}
+                    {% block title %}
                     {% endblock %}
                 </div>
             </div>
