--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -29,6 +29,10 @@
                                             class="form-control" placeholder="Total number of pages" />
                                         <input type="submit" id="button" class="button button_main"
                                             value="Add and see a chart">
+                                    {% if error %}
+                                        <div class="form-group has-error">
+                                            <span class="help-block"> {{ error}} </span>
+                                        </div>
                                 </form>
                             </div>
                         </div>
