Adding missing {% endif %}

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -33,6 +33,7 @@
                                         <div class="form-group has-error">
                                             <span class="help-block"> {{ error}} </span>
                                         </div>
+                                    {% endif %}
                                 </form>
                             </div>
                         </div>
