Adding missing slash

--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block form_action %}
-/lists/{{ list_of_books.id}}
+/lists/{{ list_of_books.id}}/
 {% endblock %}
 
 {% block book_table %}
