--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -28,7 +28,7 @@
                                             value="Add and see a chart">
                                             {% if form.errors %}
                                                 <div class="form-group has-error">
-                                                    <span class="help-block"> {{ form.errors }} </span>
+                                                    <div class="help-block"> {{ form.errors }} </div>
                                                 </div>
                                             {% endif %}
                                 </form>
