--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -141,3 +141,7 @@ a {
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+
+ul {
+    list-style: none;
+}
