--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -9,6 +9,15 @@
         <title>Reading tracker</title>
     </head>
     <body>
+        <span class="user">
+            {% if request.user.is_authenticated %}
+                Hello {{ request.user.username }},
+                Owner of list: {{ instance.owner.get_username }},
+                <a href="{% url "logout" %}">Logout</a>
+            {% else %}
+                <a href="{% url "login" %}">Login</a>
+            {% endif %}
+        </span>
     <div class="container" id="container">
 
         <div class="row">
