Changing button name

--- a/project/app/templates/registration/password_reset_confirm.html
+++ b/project/app/templates/registration/password_reset_confirm.html
@@ -7,7 +7,7 @@
     <form action="." method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <input type="submit" id="button" class="button button_login"
+        <input type="submit" id="button" class="button button_send"
         value="Change my password">
     </form>
 {% else %}
