--- a/project/app/templates/registration/password_reset_form.html
+++ b/project/app/templates/registration/password_reset_form.html
@@ -7,7 +7,7 @@
 </div>
 <form action="." method="post">
     {{ form.as_p }}
-    <input type="submit" id="button" class="button button_login"
+    <input type="submit" id="button" class="button button_send"
     value="Send email">
     {% csrf_token %}
 </form>
