--- a/project/app/templates/register_done.html
+++ b/project/app/templates/register_done.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-<h1>Welcome {{ new_user.first_name }}!</h1>
+<h1>Welcome {{ user.first_name }}!</h1>
 <p>Thank you taking time to register. Your account has been successfully created.</p>
-<p>We hope you will enjoy our Job Search Engine. Now you can <a href="{% url "login" %}">login</a>.</p>
+<p>We hope you will enjoy our Reading Process Tracker. Now you can <a href="{% url "login" %}">login</a>.</p>
 {% endblock %}
