--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-    <div class="container" id="container">
+    <div id="welcome">
         {% if request.user.is_authenticated %}
             Hello {{ request.user.username }},
             <a href="{% url "logout" %}">Logout</a>
@@ -40,7 +40,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> <!-- end of id="welcome" -->
+
 
     <div class="row">
         <div class="col-md-12 mx-auto">
