--- a/project/app/templates/myList.html
+++ b/project/app/templates/myList.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block chart_js %}
-    <div id="container" style="width: 75%;">
+    <div style="width: 75%;">
       <canvas id="bar-chart" width="1200" height="800"></canvas>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
