--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -9,55 +9,49 @@
         <title>Reading tracker</title>
     </head>
     <body>
-
-    <div id="welcome">
-        {% if request.user.is_authenticated %}
-            Hello {{ request.user.username }},
-            <a href="{% url "logout" %}">Logout</a>
-        {% endif %}
+        <div id="welcome">
+            {% if request.user.is_authenticated %}
+                Hello {{ request.user.username }},
+                <a href="{% url "logout" %}">Logout</a>
+            {% endif %}
+        </div>
         <div class="content">
             <div class="jumbotron">
                 <div class="col-md-12">
                     <h1 id="header">Your books reading progress</h1>
                     <h4>Please type details of the book of which progress you'd like to track.</h4>
-                        <div id="inputbox">
-                                    <form method="POST" action="{% block form_action %} {% endblock %}">
-                                        {% csrf_token %}
-                                        {{ form.title }}
-                                        {{ form.current_page }}
-                                        {{ form.total_pages }}
-                                        <input type="submit" id="button" class="button button_main"
-                                            value="Add and see a chart">
-                                            {% if form.title.errors %}
-                                                <div class="form-group has-error">
-                                                    <div class="help-block"> {{ form.title.errors }} </div>
-                                                </div>
-                                            {% endif %}
-                                    </form>
+                    <div id="inputbox_for_books">
+                        <form method="POST" action="{% block form_action %} {% endblock %}">
+                            {% csrf_token %}
+                            {{ form.title }}
+                            {{ form.current_page }}
+                            {{ form.total_pages }}
+                            <input type="submit" id="button" value="Add and see a chart">
+                            {% if form.title.errors %}
+                                <div class="form-group has-error">
+                                    <div class="help-block"> {{ form.title.errors }} </div>
                                 </div>
+                            {% endif %}
+                        </form>
+                    </div> <!-- end of id="inputbox_for_books" -->
                 </div> <!-- end of class="col-md-12" -->
             </div> <!-- end of class="jumbotron" -->
         </div> <!-- end of class="content" -->
-    </div> <!-- end of id="welcome" -->
-
-
-    <div class="row">
-        <div class="col-md-12 mx-auto">
-            <div class="col-md-8 mx-auto" id="table">
-                {% block book_table %}
-                {% endblock %}
-            </div>
-            <div align="center" id="chart">
-                {% block chart_js %}
-                {% endblock %}
-            </div>
-            <div class="container">
-                {% block title %}
-                {% endblock %}
-            </div>
-        </div>
-    </div>
-
-    </div>
+        <div class="row">
+            <div class="col-md-12 mx-auto">
+                <div class="col-md-8 mx-auto">
+                    {% block book_table %}
+                    {% endblock %}
+                </div>
+                <div id="chart">
+                    {% block chart_js %}
+                    {% endblock %}
+                </div>
+                <div id="registration">
+                    {% block title %}
+                    {% endblock %}
+                </div>
+            </div> <!-- end of class="col-md-12 mx-auto" -->
+        </div> <!-- end of class="row" -->
     </body>
 </html>
